--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,14 @@ body{
 h1{
     text-align: center;
 }
+img{
+    width: 50%;
+}
+* {
+    box-sizing: border-box;
+}
+div{
+    display:flex;
+    justify-content: space-between;
+    margin: 45px;
+}
